--- a/chrome-settings.html
+++ b/chrome-settings.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Push Notification codelab</title>
-    <link rel="manifest" href="assets/manifest.json">
+    <link rel="manifest" href="/sk-angular/assets/manifest.json">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 
 <button>Subscribe</button>
 
-<script src="assets/chrome-init.js"></script>
+<script src="/sk-angular/assets/chrome-init.js"></script>
 
 </body>
 </html>
